@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Fix parsing of empty multipart/form-data forms
+  - Add response_status_code method
 
 0.007     2021-04-27 02:00:33 EDT
   - Support reading request body parameters from multipart/form-data requests
